[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "sentinel_tiles"
version = "1.0.0"
description = "generates raster geometries for the Sentinel version of 100km Military Grid Reference System (MGRS) tiles"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rasters"
]

requires-python = ">=3.10"

[tool.setuptools.package-data]
sentinel_tiles = ["*.txt", "*.geojson"]
